--- a/EditorDeGrafos/Kuratowski.resx
+++ b/EditorDeGrafos/Kuratowski.resx
@@ -121,31 +121,25 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="EliminaNodo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="InsertaNodo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATPSURBVEhLjZddSFxHFMcvZlNdFLuxBpts2WyjNCUISn0Q
-        0QeRQhubECXmoUTENGkbYyMtdltsNHZpYgmp2H2KaP2EvvgiYiWpaC1YlyWI1tJWEURqLYi46PoVdYmn
-        93/unbt3r3dX/zDsnZkz89s5d87MuRKZaD8QoPUbFbTne8b11dVVGhwcJJfLRVlZWZScnEyxsbEkSRLF
-        x8dTYWEh98FGKPjn3xS4dp32nz9XW8J1ACygK6+lcWn/5A7Z7XaGHLX84PqS/Off4vFrl66YwsPAeuh/
-        9lQNnhNrpby8PKqvryev10uLi4u0s7PDY+CN3t5e7svJyaH047E0d/osj/vHrvyuXSii/c0tthfSwHro
-        H6eclGY5To9sJzW4cHs0wb3/nnmD7R/Ykun0MQt5UxymcAabQW02G3V1ddHmV/dC8N+8PMhMgAr3bn59
-        n37s7KSYmBhKijlmCpfMoE6nk8bHx9kAOgxuhNLuLrdPTU1RUlKSKVwSULwPsdKxsTEeqFckeCSo0MzM
-        DFmtVoZjYbALXL1G0p7Xp03YeOIk9fT0qEMOygg/DCrU19dH1Ykn2M7/ZibtDjxV3nHrrdu0rE648XkN
-        G0eSHn4UKLTd6GG7eXm3d5aVc5u0vLzM7kXIrDiUHbnx2RfcaZTP56Pu7m568vYFDf5X+U3qam2ljo4O
-        mp6eVi1D2vrue7bDSt+zxlNiYiL5/X6SWlpaOOhx+iBkosHr6urYNjc3lzZr3bzSyxcvchs2JGJaLz10
-        98nPlJ2dzbb4k1JRUZFWgaLB9WCo5fFjriNshoeHuU3ICIWam5vZvri4mKTU1FSuYOsLRYLrwQsLC/yK
-        UMc5rZcZFJqfn2f7lJQU/CrnazAYVLsVmcH14JKSEn4uKCiQ91VoY2lQeePpodD29jaPUS8Y5YYxU/DZ
-        OK04zynwqmoNHBcXx78o+htp62FjCPo01K5XQkKCGCvxTjOTMU7r7t7lQVhxRkYGP6enp6vWcqjd+4Zt
-        UfZ++VVtDRcWyWBsDBSjq4MTv4fH6YsXYa6enZ1VJpBLRUWFOkqGy7YCvjs4pLaGJMZICAM8zM3NqV3m
-        UMi4q2tqarSJRkdHuQ2KBJ+cnGTbzMxMkkpLS7ni8Xi4MxIUMoIhnkRuww5fWlpSW83hTU1NbFtWVkYS
-        rj5U8vPzo0KhtrY2tqusrKStbx/RRuWn7Cm0oTQ0NKiWioxwHFJgIXGQcNpYLBbKeikuKlSvrfsPtQnX
-        b91RW82lh78rH5nwDJh8SXhufqSlK4dBN90P2A5/0n/2vAL/8Lbaay4xBqWj/ANuk3BQiJUiXenv7+cO
-        M+mhiNPg+MSR4DiO3S8na3C+FpGCooIVI1FDgGP3GWWECh0Gx1xw7+tykiHAa+9cUlyNFFQPR7qih0eC
-        CkWCYw6Hw8HQiVfPaFCkW1qWaYRj98FFh0GFjPD29nZtpUYopIEhIxzvHHWkrNGgQhyOaek8pvuVUxGh
-        UBgYEnBR8CcK5TBAnCJpHxkZ4QwCQlKPQ2NoaIjcbjcfJgjLRfVjQHwUGKHQATAUuPI+D4B7f6p2cZYI
-        1x+lYH/01NVrKzeDQqZgaP36x2HuxWlTW1vLK8dtBgjuVXzA4dOlqqqKBgYGtPQHbl+7fNUUSkT0P5Us
-        IXAqMJmpAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANfSURBVEhLtZfNK3xRGMdPMnkbJSl5q4kksdBYiCSxUFZe
+        kmxEEklioaZJmCRWLGQjJYmFBUksbPwFkmyU7CwslAULKT2/3/f7O2d+487LPcP41J079zkv33Of85zn
+        nKvEgo+PD7m8vJTl5WVpb2+Xuro6KSoqksLCQv7v6uqShYUF1rElofDLy4usra1JZWWlKKUkIyNDamtr
+        KTQ2NsYLA2loaGA5LtTd2trSPcQnrvDZ2Zn4fD521traKvv7+/L8/KxLY4M6bW1tbFNaWipHR0e6JJoo
+        4c/PT5mdnWVjv9+flPsMFxcXYS9hCmLxRRiifX19bDA9PU1X/4TJyUn21dvbqy3/+SJs3nRxcVFbfs7S
+        0hL7nJiY0JZ/hIV3dnbCb5pqhoaG2HfknFMYLs3Pz2dgvL+/syDVYNnl5eXJ6+srnymMAMCIvhNIttze
+        3lIDrgfq7e2NiQBB5cb6+rpkZWVJVVWVtojs7e1Jdna2ZGZmyvb2trbGpqOjg28N1PHxMUeCuxsQRt2y
+        sjI+Pz09SUFBAW3j4+O0JeL09JR1eR8ZGZGcnBymRTecwmiLZ6xZm6UHDWghgBVeH5nJhkjhg4MD/vd6
+        vUnFRlNTk7S0tIgqKSmxXkJGGDFh0unq6qoutQNamGeVnp4ugUBAmxNjhLH0iouL+R8bRjIEg0HxeDyi
+        8DM/P6/NiYl0tQlKXHC7LXNzc5KWliYK++rg4KA2J8YZXHhbPOfm5sr9/T1tbvT390tFRYWoxsZGZiwb
+        nMKIZMw3bPX19bS50dnZyQBTmGxEpg1OYRDpcsxfIpCsMLVcTufn52xkk0DA9fU1r0iMzWl3cnh4GNZi
+        rsbSsHX3T4CboYVEQuGNjQ2O5OrqihV+AxyloIEDI6AwfI+RlJeX05hqEITNzc3UMKmVwsDMdXd3t7ak
+        juHhYfaNs5ghLAzMvmybUGxAVkSfzoj/IgympqZYsaenh4e/7wKXDgwMsK9Ye0GUMAiFQmyAszHOysmA
+        wZ6cnHA+sQXigyAWMYUB1mR1dTUHgPPSysqK3Nzc6NJoHh4euFPV1NSwjduZPK6wAUcbpri/nZkLezjy
+        NO74fEG+N2XYa3d3d10PFq7ChsfHR34TzczM8OAAQXgCiWd0dFQ2Nzfl7u5O13ZD5A8baduYGA5EKQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="EliminarArista.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -194,32 +188,60 @@
   </data>
   <data name="HomeomorfoK5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYDSURBVEhLnVd9TJV1FL7/OKcoMxNxeVWGMiSYIWgEc0Qw
+        clMi+EMNY0502CRmukkyMxk5pjkHISOSFCOTKElGivnBLqGCQCgiXrwhV3R8pExCN+LjfvjEc7gvXuG9
+        CT3b3f297z3v+/zOOc8553c1+B8oLy9HVFQUAgICEB8fj9bWVtsv48eEia9fvw43Nzfs378fFRUVyMjI
+        gLOzM4xGo81ifJgw8apVq3D06FFZ9+V8K9+83rhxo6zHiwkTu7u7i3fWri705x7D4NnfJAp+fn42i/Fh
+        QsTM7YwZM3D8+HGY6xvwbGAAliYD0tLS4OLigpMnT9osX45xEff09GD79u0ICwtDcnIypk2bhoMHD6K4
+        uBj79u0Tb0nq7+8v6/r6etuTjvFSYnrp7e2NmJgY2QBhMBig1WoREhIiESgtLZX7RElJiYgvOjoaDx48
+        sN0dC4fE3d3dIpigoCBUV1fb7g6jvb0dc+fOlY1kZmaqCuvQoUPQaDTYtWsXqqqqZHPKxglVYnrp5eUl
+        NWpvrCA3Nxfr16+XNTdIr9VQW1srpbZ8+XJJ06RJk6QMCSEmEXPHpkCD4OBg1NXViYEaaMf8KvD09BRl
+        j0ZcXBwSEhLwpKMT5ttN6BqqBKbhzJkz0FRWVspFSkqKvIzGS5YsgdlsxmPzE3zWecT2GsACKzK7fsai
+        TW/KS1L/ykPe47NITU3FmjVrJPdMy+fGb3D4l1xROiM2eOESrI+68OzpUxw4cEDCr/H19RVFWgx/YuCn
+        IiGIjY3F7t27UdPRAO21CJw7dw4FBQVIqE3D1GPL8Mo8F4SHh0N7eTWm14Rilv88ySc9ZxudXRqG95M/
+        lDATA8W/AoODsmbpbdu2DRonJyf09vbCpPsdfemHZVenT5/GlClTMMtXK8QrV66EdrMvQvQJWLzMG1u2
+        bMHFixfhXh2N5PtfI0C/WRqLXq+Xlwc1f4SyjmosWLAAe/fuxVD4YK75A7eGortw4UIRm4aLhoYGmOtu
+        wHS1CpZ7rRL2pKQkGAc74HMnFlW9jXjnbiIMPfckLc3NzULgZ4hDU/99RBiT4Jr4Bnbs2CH3SewRuRTr
+        1q0DI8pNMRJ8Vmm3GuaVIaKXLS0tKCwsFJWyRkm8uCkGi/RrcXegDdQDX6SAxPr+VnSZezD92lDIfV4T
+        lXvVrEVidjL6+vrEjh7yOXY8BaJqkrNeZ86cKbtqbGyUUnIPfl08/qT9K6w27pRI8KNAISa+6y7F1CN+
+        UoZOp95C3T8GuU9QYKx71r+CF+qYBpMnTx6ZrxmncjC7/F3Z2HvGTzE1a+kL7dCe+OHDh3ApCUFcwU4E
+        GuJfIGbzWLFihe1qGGMaCBXHvkww1BQX2+OmxPghTwKR/qhQfiOGie+hra1NSjDq4w8w73a03LcnZvTs
+        I0WMIWZ9Kp1IERfzxn79quccuN5cjR/+viC/k+DsHR08PDyklgmPL96Gc0P4CLHJZJIwK4JUMIaY4EBg
+        WyRu9bXINzXAQ8CcRVp8XzVc77qmSsxymyNNQQGjlXLiS3Rbnso126a9IBWoEnPCzJ8/33Y1PBQYbmqg
+        rKxMmgXHIUuRQ8Ie58+fl+goGC1IBarEBNXNHk7YDwWCnY7kap5YrVa4urqOCJSbYBmOhkNi1tyGDRtk
+        bT8UqGqWTFZWlvRnklNc9qBAeQhkJ6MDzPNoOCRmG2Vd81RBsXHmcmL5+PiMdB8iPT1d7JTo8JstloSR
+        kZEyndTgkHjPnj1SewwTxxi9Y3jz8/NtFs9BAfE4xM2xCzKnjBBPIY4OgarEFBF33NnZCdPlq9LHCdYq
+        W6oaePLkwLly5QoGCk/BfOMmrG3tiIiIQHZ2ts3qOVSJOTRIQgxe0sFyd7ikeFigugMDA+VUQW+YY35o
+        T1ERnHSwWGEqrxAtbN26Ve7bw6HHDB09Jqm5tk4EEhoaKi9i02d4eeqg2PjhmqOUajbfvIX+Ez/iWc8T
+        IeUMHg2HOWae6ElRUZEIhvnjxOKmHIGNhM/odDo5jTBCFKPaMw6Jiby8PPGSImNL/C9SBTk5OULGSuD5
+        Tf0/FfAvNSVU0IcxmL4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="HomeomorfoK33.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAS8SURBVEhLhZbtTxtHEMb9P1YIqf1IlS9VkVDVSq0c0aJS
+        kFpZIUBNVAp1eAkhhJcgiimOgTh2gbghroESJWCQI0IMtgEbG79OeeZujr3j7Pwka9d7e/PszM7OniOd
+        TtPU1BT19fVxGwqFqB4bGxvU3t5OHo+HxsfH9dH6zM3Nse3BwUH+AQc6qYMDqp6d8Q8TMpkMP7SSzWb5
+        OeYVnz3nsd7eXm5rsbW1RYFAgMp7MarE3xEcnZiY0IQLC4uU/f5HKj4P8SKWlpb018zA21hMM3A5/pjH
+        hoaGuK0FREBh9k8qeP/ifldXFznwAIKlF2HK/+6hYDBYUxirnZmZYY9hCCAC9RBbiFB++AH38Y4Dewqv
+        YWz/5A2Njo5SR0cHT7DD9ehX9hqsvF6tuUgg+dPU8aXxf2BggA6uourAAAw1NzezoUjqNU+wC2GqfE6B
+        7CtOlra2NloOB8h3/kJ/akZEIx92+B049O38zzwOWBhIto2mtH1IJpM3wjicWqCLSp77sjD38c1Qw7jf
+        7+d24XxNH722DQzhkZERbv/NvaWDwhH3Dw8PDfHTcoaFBVkoxmdOA9wHEEP40cLO7FlQf0I0lvLpPUVY
+        PZOe5Lze0zJ5bGyMxtNPWURQt+JOQnsXYj6fj1swdbrCrQAbgiE8OTmp94he5d4YXgOI//KwR/+ngcUI
+        WFDP3kPe+7OrJAXIBzXM4HF6We8pwqoh0Hl07REnx+KEKYPVhcLDT9y3KJfL6SPmfBDUCBjC1izG3ojX
+        sk8QXl1d5b4sFKJer/fqKMaN5EEE1LAKtsKovVbunUzT3FmIE04Ih8MceiwUojgmwk9H97mFt2o+CE9O
+        tTILDGHVgABP7yYe6f+uQaY7nU4jswWIQVTNfhU1ww1hqakq/+X3qfdYq8kq8LSxsZGi0ag+cs2nsVZb
+        b4GtsLVYAExUJwNUORR57HFra6txdAAEcbSWMy/1ETO2wmqWgsPiMWdzsVoyXoAo7m0g83E3i/gfyTkW
+        t4tShar2wtbjhEkQBdiz3d1d9lRQI+RyuYz9BTgNqAUqpWrZXlg9TjCilre1rTB95b6t/9Owfn189t3n
+        pr1VMxiokQO2wgiVGIlEIhzeHkv4pLYD8RZ7LsSLH+jt5Tv9H9FltVg/1FiZhGxnZ8d0GajHRD338A7P
+        S6UStbS06KPm2pyvXNoLS7IgoY5Lp1wkrOdUCgQQYWsIkWjd3d3c38zvGdUP5dNWWJLFn/nHuJGswCsp
+        iyKMhcq2CBCXRcvFkK3kaocaojNrXq69tZBKJsKqMRWIwxm5388rFzeFUfybmpro1vxtW09V4J3r7wFq
+        aGig+9Fp0/VpBece4r+dPKFp3yx98cCpP7kSRkjwZQmehlf4Iq8HPN17f8D9Zy+DthVPZXt7m76+18rf
+        1wB62EoWxsc2PlfxvYwkQ3bakUgk+LLHF2nOdZfH1CNkB0TW19cp0/INlTa3+V3YcLjdbhbOOn/gQYQ9
+        Ho/rr5nBmYahYmiV8p5hXiiM1AMRgSOFRT/levpYA2MOFAf8qWYveEUfCx2+izEfJKOb1N/fz/1aSIZX
+        Dt9TObbP/9ljeYCzh1Y+1msBj/Ei5nZ2drKhj4EoYj6c0i6VNP0P+s/qWoN0k2AAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
